# beirdobot

./: Makefile.in  beirdobot.spec  configure  configure.ac  configure.ac.in
bot/: beirdobot.service
bot/include/: config.h.in  logging.h  protos.h
bot/src/: Makefile.in  clucene.cc  curses.c  import.c  logging.c  main.c  mysql.c  queue.c
bot/src/botnet-1.6.4/: config.h.in
bot/src/botnet-1.6.4/example/: bot.c
bot/src/botnet-1.6.4/makelib/: botnet.c  dcc_chat.c  dcc_send.c
bot/src/cjson/: cJSON.c
bot/src/clucene/: Makefile.gjh
bot/src/clucene/src/core/CLucene/analysis/standard/: StandardTokenizer.cpp
bot/src/clucene/src/core/CLucene/document/: DateTools.cpp  DateTools.h
bot/src/clucene/src/core/CLucene/util/: Array.h
bot/src/clucene/src/shared/: CMakeLists.txt
bot/src/clucene/src/shared/CLucene/: clucene-config.h.cmake
bot/src/libmrss-0.12/: config.h.in
bot/src/libmrss-0.12/src/: mrss_edit.c
bot/src/libmrss-0.12/test/: parser.c
bot/src/libnxml-0.11/src/: nxml_dtd.c  nxml_tools.c
bot/src/opie-2.32/: .gitignore  config.h.in  configure  configure.ac  opie.h  opieftpd.c  opiekey.c  opielogin.c  opiesu.c  opietest.c
bot/src/opie-2.32/libmissing/: .gitignore
bot/src/opie-2.32/libopie/: insecure.c  login.c  logwtmp.c  newseed.c  parsechallenge.c
bot/src/plugins/: Makefile.in  core.c  luascript.c  mailbox.c  perl.c  rssfeed.c  trac.c  tracredir.c  trout.c
scripts/: acconfig.h
web/: .htaccess  beirdobot.php
web/includes/: db.php  errordisplay.php  errors.php  init.php  irc_channels.php  irc_messages.php  irc_servers.php  utils.php
web/modules/: channel.php  search.php  welcome.php
web/modules/channel/: history.php
web/templates/: _error.php  channel.php  footer.php  header.php  search.php  welcome.php
web/templates/channel/: history.php
webservice/: Makefile.in  webservice.c
webservice/mongoose/: Makefile  mongoose.c
